# eval_metrics

./: .gitignore  README.md  pyproject.toml
configs/: generate.yaml  pipeline.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml  model_summary.yaml
configs/data/: ct_abca.yaml  ct_abca_spatial.yaml  ct_abca_spatial_regressor.yaml  ct_base.yaml
configs/experiment/classifier/: abca.yaml  abca_spatial.yaml  abca_spatial_deepset.yaml  abca_spatial_gcn.yaml  abca_spatial_gcn_weighted.yaml  abca_spatial_regressor.yaml
configs/generator/: nicheflow.yaml  otcfm.yaml  otcfm_spatial.yaml
configs/hydra/: default.yaml
configs/logger/: tensorboard.yaml  wandb.yaml
configs/model/: classifier.yaml  classifier_spatial.yaml  classifier_spatial_deepset.yaml  classifier_spatial_gcn.yaml  classifier_spatial_gcn_weighted.yaml  regressor_spatial.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml  gpu.yaml
data/: shared_pca.npz
notebooks/: evaluation.ipynb
reports/: model_comparison.csv  model_comparison_1025.md  model_comparison_knn.csv  model_comparison_knn_pc50.csv  model_comparison_shared50.csv  model_comparison_shared50_new.csv  model_comparison_updated.csv  otcfm1025_vs_nicheflow.md
reports/nicheflow/: eval.md  metrics.csv
reports/nicheflow_cfm_unaligned/: eval.md  metrics.csv  metrics_knn.csv  metrics_knn_pc50.csv  metrics_npc50.csv  metrics_npc8.csv  metrics_updated.csv
reports/nicheflow_vfm/: eval.md  metrics.csv  metrics_knn.csv  metrics_knn_pc50.csv  metrics_updated.csv
reports/nicheflow_vfm_unaligned/: metrics_npc50.csv  metrics_npc8.csv
reports/otcfm/: eval.md  metrics.csv
reports/otcfm_1025/: eval.md  metrics.csv  metrics_knn.csv  metrics_knn_pc50.csv  metrics_npc8.csv  metrics_updated.csv
reports/otcfm_shared50_1025/: metrics_npc50.csv  metrics_npc50_new.csv
reports/otcfm_spatial_1025/: eval.md  metrics.csv  metrics_knn.csv  metrics_knn_pc50.csv  metrics_npc8.csv  metrics_updated.csv
reports/otcfm_spatial_shared50_1025/: metrics_npc50.csv  metrics_npc50_new.csv
src/nicheflow_eval/: __init__.py  contract.py  evaluate.py
src/nicheflow_eval/adapters/: __init__.py
src/nicheflow_eval/adapters/nicheflow/: __init__.py  generate.py  generator.py  h5ad_preprocessor.py  preprocess.py
src/nicheflow_eval/classifier/: __init__.py  datamodule.py  dataset.py  nets.py  task.py  train.py  train_helper.py
src/nicheflow_eval/data/: __init__.py  anndata.py  dataclass.py
src/nicheflow_eval/metrics/: __init__.py  _common.py  c2st.py  classifier_gap.py  concordance.py  distances.py  morans.py
src/nicheflow_eval/pipeline/: __init__.py  __main__.py  generate.py  run.py
src/nicheflow_eval/preprocessing/: __init__.py  graph.py  h5ad_preprocessor.py  prepare.py
src/nicheflow_eval/utils/: __init__.py  instantiators.py  log.py
src/paired_slides_eval/: __init__.py  cli.py  contract.py  evaluate.py  generate.py  loaders.py  preprocessing.py  probes.py  reconcile.py
src/paired_slides_eval/adapters/: __init__.py  base.py  otcfm.py  otcfm_export.py  prepare_classifier_slide.py  prepare_shared_slides.py
src/paired_slides_eval/adapters/nicheflow/: __init__.py  generate.py  generator.py  graph.py  h5ad_preprocessor.py  preprocess.py
src/paired_slides_eval/classifier/: __init__.py  datamodule.py  dataset.py  nets.py  task.py  train.py  train_helper.py
src/paired_slides_eval/data/: __init__.py  anndata.py  dataclass.py  neutral_basis.py  shared_pca.py
src/paired_slides_eval/metrics/: __init__.py  _common.py  c2st.py  c2st_graph.py  c2st_nn.py  classifier_gap.py  concordance.py  distances.py  distribution.py  expr_recon.py  metrics.py  morans.py
src/paired_slides_eval/pipeline/: __init__.py  __main__.py  io.py  run.py
src/paired_slides_eval/utils/: __init__.py  exceptions.py  instantiators.py  log.py  plots.py  seed.py
src/paired_slides_eval/viz/: __init__.py  umap_compare.py
tests/: conftest.py  test_anndata.py  test_basis.py  test_c2st.py  test_c2st_nn.py  test_classifier_gap.py  test_concordance.py  test_distances.py  test_distribution.py  test_evaluate.py  test_expr_recon.py  test_flat_niche.py  test_generate.py  test_generated_slide.py  test_metrics_table.py  test_morans.py  test_neutral_basis.py  test_nicheflow_adapter.py  test_pca_space.py  test_pkl_io.py  test_preprocessing.py  test_shared_pca.py
