[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "nicheflow-eval"
version = "0.1.0"
description = "Standalone evaluation metrics for spatial single-cell generative models (NicheFlow)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
dependencies = [
    # --- metric kernel ---
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",      # C2ST MLP + NearestNeighbors
    "torch>=2.2",             # MMD/EMD kernels + classifier forward
    "pot>=0.9.4",             # `ot` — exact-EMD / Wasserstein
    "squidpy>=1.4",           # Moran's I spatial autocorrelation
    "anndata>=0.10",          # raw .h5ad inputs + ephemeral AnnData for Moran's I
    "scanpy>=1.10",           # PCA (normalize_total/log1p/pca) in the niche preprocessing
    "pandas>=2.0",            # results aggregation / tables
    # --- classifier training (in scope: full train pipeline, not just a ckpt) ---
    "lightning>=2.2",
    "torchmetrics>=1.3",
    "torch-geometric>=2.5",   # GraphCTClassifierNet
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "jaxtyping>=0.2",
    "rich>=13.0",
    "matplotlib>=3.8",
    "pillow>=10.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
wandb = ["wandb>=0.16"]
# The full checkpoint -> generation pipeline (`nicheflow_eval.pipeline`) imports the NicheFlow
# flow model as a blackbox. NicheFlow is not on PyPI; install it from the sibling repo, e.g.:
#   pip install -e ../nicheflow_mba
# (kept out of the dependency list so the standalone metric path installs without it).
pipeline = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ipykernel>=6.29",
    "jupyterlab>=4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nicheflow_eval"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
