[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "paired-slides-eval"
version = "0.1.0"
description = "Model-agnostic evaluation metrics for spatial single-cell generative models."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
# Core = the metric suite only. Everything needed to evaluate a (target, generated) pair and
# nothing more. Classifier training and the generation adapters are optional extras (below).
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",      # C2ST MLP + NearestNeighbors + PCA
    "torch>=2.2",             # MMD/EMD kernels + classifier forward (ct/* metrics)
    "pot>=0.9.4",             # `ot` — exact-EMD / Wasserstein (distribution)
    "squidpy>=1.4",           # Moran's I spatial autocorrelation
    "anndata>=0.10",          # raw .h5ad inputs + ephemeral AnnData for Moran's I
    "pandas>=2.0",            # results aggregation / tables
]

[project.optional-dependencies]
# The cell-type-classifier training stack (the ct/* metrics need a trained classifier). Confined to
# `paired_slides_eval.classifier` + `utils`; never imported on the evaluation path.
classifier = [
    "lightning>=2.2",
    "torchmetrics>=1.3",
    "torch-geometric>=2.5",   # GraphCTClassifierNet
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "jaxtyping>=0.2",
    "rich>=13.0",
    "matplotlib>=3.8",
    "pillow>=10.0",
]
# The bundled NicheFlow generation adapter (`paired_slides_eval.adapters.nicheflow`). The NicheFlow
# flow model itself is not on PyPI — also `pip install -e ../nicheflow_mba`.
nicheflow = [
    "scanpy>=1.10",           # normalize_total/log1p/pca in the niche preprocessing
    "tqdm>=4.66",
]
# Back-compat alias for the old `[pipeline]` extra (now `[nicheflow]`).
pipeline = ["paired-slides-eval[nicheflow]"]
wandb = ["wandb>=0.16"]       # W&B logging for classifier training

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ipykernel>=6.29",
    "jupyterlab>=4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/paired_slides_eval"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
