[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "paired-slides-eval"
version = "0.1.0"
description = "Model-agnostic evaluation metrics for spatial single-cell generative models."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
# Core = the metric suite only. Everything needed to evaluate a (target, generated) pair and
# nothing more. Classifier training and the generation adapters are optional extras (below).
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",      # C2ST MLP + metrics + PCA
    "torch>=2.2",             # MMD kernels + c2st_graph + classifier-forward metrics
    "pot>=0.9.4",             # `ot` — exact-EMD / Wasserstein (distribution)
    "squidpy>=1.4",           # Moran's I spatial autocorrelation
    "anndata>=0.10",          # raw .h5ad inputs + ephemeral AnnData for Moran's I
    "pandas>=2.0",            # results aggregation / tables
]

[project.optional-dependencies]
# The cell-type-classifier training stack (the ct/* metrics need a trained classifier). Confined to
# `paired_slides_eval.classifier` + `utils`; never imported on the evaluation path.
classifier = [
    "lightning>=2.2",
    "lightning-utilities>=0.11",
    "torchmetrics>=1.3",
    "torch-geometric>=2.5",   # GraphCTClassifierNet
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "jaxtyping>=0.2",
    "rich>=13.0",
    "matplotlib>=3.8",
    "pillow>=10.0",
    "tensorboard>=2.16",
]
# Configuration-driven generation (`paired_slides_eval.generate` / `paired_slides_eval.pipeline`):
# Hydra selects and constructs a generation adapter from config. Pure evaluation does not need this.
pipeline = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]
# The fm_mnist OT-CFM adapter (`paired_slides_eval.adapters.otcfm`). The actual `fm` package is
# local project code, not a PyPI dependency — install it separately with
# `pip install -e ../fm_mnist`, or set `fm_root` in the Hydra generator config.
otcfm = []
# The bundled NicheFlow generation adapter (`paired_slides_eval.adapters.nicheflow`). The NicheFlow
# flow model itself is not on PyPI — also `pip install -e ../nicheflow_mba`.
nicheflow = [
    "scanpy>=1.10",           # normalize_total/log1p/pca in the niche preprocessing
    "tqdm>=4.66",
]
wandb = ["wandb>=0.16"]       # W&B logging for classifier training
all = [
    "lightning>=2.2",
    "lightning-utilities>=0.11",
    "torchmetrics>=1.3",
    "torch-geometric>=2.5",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "jaxtyping>=0.2",
    "rich>=13.0",
    "matplotlib>=3.8",
    "pillow>=10.0",
    "tensorboard>=2.16",
    "scanpy>=1.10",
    "tqdm>=4.66",
    "wandb>=0.16",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ipykernel>=6.29",
    "jupyterlab>=4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/paired_slides_eval"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
